--- a/dashboard_admin.html
+++ b/dashboard_admin.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UT-8">
-    <title>JuegaTodo</title>
+    <title>Hemera Velas</title>
 
     <!-- Custom css -->
     <link rel="stylesheet" href="css/login.css">
