--- a/dashboard.html
+++ b/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UT-8">
-    <title>JuegaTodo</title>
+    <title>Hemera Velas</title>
 
     <!-- Custom css -->
     <link rel="stylesheet" href="css/login.css">
@@ -14,14 +14,17 @@
     <nav class="navbar navbar-expand-sm bg-light">
         <div class="container-fluid">
             <ul class="navbar-nav">
+                <a class="navbar-brand" href="#">
+                    <img src="img/hemera.jpg" alt="" width="80" height="80">
+                  </a>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link 1</a>
+                    <a class="nav-link" href="#">Tienda</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link 2</a>
+                    <a class="nav-link" href="#">Carrito</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link 3</a>
+                    <a class="nav-link" href="#">Iniciar sesión</a>
                 </li>
             </ul>
         </div>
