--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UT-8">
-    <title>JuegaTodo</title>
+    <title>Hemera Velas</title>
 
     <!-- Custom css -->
     <link rel="stylesheet" href="css/login.css">
@@ -17,7 +17,7 @@
 
             <div class="fadeIn first">
                 <!-- Logo -->
-                <img src="img/logo.png" class="img-login" id="icon" alt="User Icon" />
+                <img src="img/hemera.jpg" class="img-login" id="icon" alt="User Icon" />
             </div>
 
             <!-- Login Form -->
