--- a/registro_admins.html
+++ b/registro_admins.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UT-8">
-        <title>JuegaTodo</title>
+        <title>Hemera Velas</title>
 
         <!-- Custom css -->
         <link rel="stylesheet" href="css/login.css">
@@ -17,30 +17,36 @@
 
                 <div class="fadeIn first">
                     <!-- Logo -->
-                    <img src="img/logo.png" class="img-login" id="icon" alt="User Icon" />
+                    <img src="img/hemera.jpg" class="img-login" id="icon" alt="User Icon" />
                 </div>
 
                 <!-- register Form -->
                 <form id="register-admin-form">
-                    <div class="form-group">
-                        <label for="email">Dirección Email</label>
-                        <input type="text" id="email" class="fadeIn second" name="email" placeholder="Email">
+                    <div class="row">
+                        <div class="form-group col-12">
+                            <label for="email">Dirección Email</label>
+                            <input type="text" id="email" class="fadeIn second" name="email" placeholder="Email">
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="name">Nombre</label>
-                        <input type="text" id="name" class="fadeIn second" name="name" placeholder="Nombre de Usuario">
+                    <div class="row">
+                        <div class="form-group col-6">
+                            <label for="name">Nombre</label>
+                            <input type="text" id="name" class="fadeIn second" name="name" placeholder="Nombre">
+                        </div>
+                        <div class="form-group col-6">
+                            <label for="username">Nombre de usuario</label>
+                            <input type="text" id="username" class="fadeIn second" name="username" placeholder="Username">
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="username">Nombre de usuario</label>
-                        <input type="text" id="username" class="fadeIn second" name="username" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Contraseña</label>
-                        <input type="text" id="password" class="fadeIn third" name="login" placeholder="Contraseña">
-                    </div>
-                    <div class="form-group">
-                        <label for="repeat-password">Repetir contraseña</label>
-                        <input type="text" id="repeat-password" class="fadeIn second" name="repeat-password" placeholder="Repetir contraseña">
+                    <div class="row">
+                        <div class="form-group col-6">
+                            <label for="password">Contraseña</label>
+                            <input type="text" id="password" class="fadeIn third" name="password" placeholder="Contraseña">
+                        </div>
+                        <div class="form-group col-6">
+                            <label for="repeat-password">Repetir contraseña</label>
+                            <input type="text" id="repeat-password" class="fadeIn second" name="repeat-password" placeholder="Repetir contraseña">
+                        </div>
                     </div>
                     <input type="submit" class="fadeIn fourth" value="Entrar">
                 </form>
