--- a/login.html
+++ b/login.html
@@ -17,13 +17,13 @@
 
             <div class="fadeIn first">
                 <!-- Logo -->
-                <img src="img/hemera.jpg" class="img-login" id="icon" alt="User Icon" />
+                <img src="img/hemera2.jpg" class="img-login" id="icon" alt="User Icon" />
             </div>
 
             <!-- Login Form -->
             <form id="login-form">
-                <input type="text" id="username" class="fadeIn second" name="login" placeholder="Nombre de Usuario">
-                <input type="text" id="password" class="fadeIn third" name="login" placeholder="Contraseña">
+                <input type="text" id="username" class="fadeIn second" name="login" placeholder="Nombre de Usuario" required>
+                <input type="text" id="password" class="fadeIn third" name="login" placeholder="Contraseña" required>
                 <input type="submit" class="fadeIn fourth" value="Entrar">
             </form>
 
