--- a/registro.html
+++ b/registro.html
@@ -17,7 +17,7 @@
 
                 <div class="fadeIn first">
                     <!-- Logo -->
-                    <img src="img/hemera.jpg" class="img-login" id="icon" alt="User Icon" />
+                    <img src="img/hemera2.jpg" class="img-login" id="icon" alt="User Icon" />
                 </div>
 
                 <!-- register Form -->
