--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
     <title>Hemera Velas</title>
 
     <!-- Custom css -->
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/dashboard.css">
 
     <!-- Se agrega bootstrap y jquery -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -15,22 +15,33 @@
         <div class="container-fluid">
             <ul class="navbar-nav">
                 <a class="navbar-brand" href="#">
-                    <img src="img/hemera.jpg" alt="" width="80" height="80">
+                    <img src="img/hemera2.jpg" alt="" width="80" height="80">
                   </a>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tienda</a>
+                    <a class="nav-link" href="dashboard.html">Tienda</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Carrito</a>
+                    <a class="nav-link" href="carrito_pago.html">Carrito</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Iniciar sesión</a>
+                    <a class="nav-link" href="login.html">Iniciar sesión</a>
                 </li>
             </ul>
         </div>
     </nav>
     <div class="container">
+        <h2>Productos disponibles</h2>
+        <!-- <div id="grid-productos"></div> -->
         
+        <table align="center" id="tbl-prodcutos" class="table">
+            <thead>
+                <th>Nombre</th>
+                <th>Precio</th>
+                <th>Imagen</th>
+                <th>Acción</th>
+            </thead>
+            <tbody></tbody>
+        </table>
     </div>
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
