--- a/dashboard_admin.html
+++ b/dashboard_admin.html
@@ -11,9 +11,20 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 </head>
 <body>
-
+    <nav class="navbar navbar-expand-sm bg-light">
+        <div class="container-fluid">
+            <ul class="navbar-nav">
+                <a class="navbar-brand" href="#">
+                    <img src="img/hemera2.jpg" alt="" width="80" height="80">
+                </a>
+                <h1>Dashboard admin</h1>
+            </ul>
+        </div>
+    </nav>
     <div class="container">
-        <h1>Dashboard admin</h1>
+        
+        <h3> administrador de productos </h3><br><br><br><br><br>
+        <h3> administrador de usuarios </h3>
     </div>
     <!-- bootstrap -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
