--- a/login.html
+++ b/login.html
@@ -29,7 +29,8 @@
 
             <!-- Remind Passowrd -->
             <div id="formFooter">
-                <a class="underlineHover" href="registro.html">Registrar</a>
+                <a class="underlineHover" href="registro.html">Registrar Clientes</a>
+                <a class="underlineHover" href="registro_admins.html">Registrar Admins</a>
             </div>
 
         </div>
