--- a/registro.html
+++ b/registro.html
@@ -25,27 +25,27 @@
                     <div class="row">
                         <div class="form-group col-12">
                             <label for="email">Dirección Email</label>
-                            <input type="text" id="email" class="fadeIn second" name="email" placeholder="Email">
+                            <input type="text" id="email" class="fadeIn second" name="email" placeholder="Email" required>
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group col-6">
                             <label for="name">Nombre</label>
-                            <input type="text" id="name" class="fadeIn second" name="name" placeholder="Nombre de Usuario">
+                            <input type="text" id="name" class="fadeIn second" name="name" placeholder="Nombre de Usuario" required>
                         </div>
                         <div class="form-group col-6">
                             <label for="username">Nombre de usuario</label>
-                            <input type="text" id="username" class="fadeIn second" name="username" placeholder="Email">
+                            <input type="text" id="username" class="fadeIn second" name="username" placeholder="Email" required>
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group col-6">
                             <label for="password">Contraseña</label>
-                            <input type="text" id="password" class="fadeIn third" name="login" placeholder="Contraseña">
+                            <input type="text" id="password" class="fadeIn third" name="login" placeholder="Contraseña" required>
                         </div>
                         <div class="form-group col-6">
                             <label for="repeat-password">Repetir contraseña</label>
-                            <input type="text" id="repeat-password" class="fadeIn second" name="repeat-password" placeholder="Repetir contraseña">
+                            <input type="text" id="repeat-password" class="fadeIn second" name="repeat-password" placeholder="Repetir contraseña" required>
                         </div>
                     </div>
                     <input type="submit" class="fadeIn fourth" value="Entrar">
